# claude

./: .claude_context.md  Guia-de-prompting-do-Claude.md  README.md
python/audio/: .gitignore  LEIA-ME-ANTES.md  PYTHON_3.13_ISSUES.md  QUICKSTART.md  README.md  RESPOSTA_COMPLETA.md  VERIFICACAO_COMPATIBILIDADE.md  VERSION_HISTORY.md  check_compatibility.py  check_dependencies_tree.py  check_python.py  find_models.py  install.sh  manage_models.py  requirements.txt  run_transcribe.sh  show_model_cache.py  transcribe_audio.py  verify_before_install.sh
python/notebook/: README.md
python/pm-rag/: .gitignore  README.md  activate-hatch-venv.sh-template  mypy.template.ini  pyproject.toml
python/pm-rag/src/: util.py
python/pm-rag/src/pm_rag/: __about__.py  util.py
python/pm-rag/tests/: README.md  Troubleshooting.md  ddl_01.py  mnb_audio.py  mnb_db_schema.py  mnb_main.py  mnb_queries.py  mnb_surveys.py  run_sql.py
python/psql-catalog/: .gitignore  CONTRIBUTING.md  DEPENDENCY_ANALYSIS.md  README.md  RELEASE-NOTES.md  pyproject.toml
python/psql-catalog/docs/: 01.add_describe-all_feature.md  02.add_transverse_schema.md
python/psql-catalog/src/psql_catalog/: __init__.py  batch_operations.py  catalog.py  dependency_graph.py  display.py  exceptions.py  get_schema_info.py  main.py  serialization.py  test_dependency_graph.py  usage_example.py
python/psql-catalog/tests/: test_catalog.py  test_serialization.py
