[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pm-rag"
dynamic = ["version"]
description = 'RAG solution using PostgreSQL + pgvector for Industrial Plant Management'
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
keywords = []
authors = [{ name = "João A. Ferreira", email = "joao.parana@gmail.com" }]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "numpy",
  "pgvector",
  "psycopg[binary]",
  "SQLAlchemy",
  "marimo",
  "nbformat",
]

[project.urls]
Documentation = "https://github.com/U.N. Owen/pm-rag#readme"
Issues = "https://github.com/U.N. Owen/pm-rag/issues"
Source = "https://github.com/U.N. Owen/pm-rag"

[tool.hatch.version]
path = "src/pm_rag/__about__.py"

[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/pm_rag tests}"

[tool.mypy]
python_version = "3.12"

[[tool.mypy.overrides]]
module = ["pgvector.*", "psycopg.*"]
ignore_missing_imports = true

[tool.coverage.run]
source_pkgs = ["pm_rag", "tests"]
branch = true
parallel = true
omit = [
  "src/pm_rag/__about__.py",
]

[tool.coverage.paths]
pm_rag = ["src/pm_rag", "*/pm-rag/src/pm_rag"]
tests = ["tests", "*/pm-rag/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
